changed BeforeEach in StrategyTest and renamed the class, also added some Javadoc